# MinVkImgui

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Doxyfile  DoxyfileTemplate  LICENSE  README.md  depmanager.yml
.github/: copilot-instructions.md
cmake/: BaseConfig.cmake  CMakePresetsBase.json  CMakePresetsCI.json  CMakePresetsLinux.json  CMakePresetsMinGW.json  CoverageConfig.cmake  Depmanager.cmake  Vulkan.cmake
source/: CMakeLists.txt  baseDefine.h  main.cpp  pch.h
source/core/: Application.cpp  Application.h  Log.cpp  Log.h  MainWindow.cpp  MainWindow.h  Settings.cpp  Settings.h  Theme.cpp  Theme.h  defines.h  utilities.cpp  utilities.h
source/core/actions/: Action.cpp  Action.h  FileActions.cpp  FileActions.h
source/core/event/: AppEvent.h  Event.cpp  Event.h  KeyCode.cpp  KeyCodes.h  KeyEvent.h  MouseCode.h  MouseEvent.h
source/core/math/: vectors.h
source/core/views/: DemoView.cpp  DemoView.h  FirstView.cpp  FirstView.h  SecondView.cpp  SecondView.h  View.cpp  View.h
source/core/vulkan/: VulkanContext.cpp  VulkanContext.h  vkData.h
test/: CMakeLists.txt
